Fixing small layout issue

--- a/static/css/team.css
+++ b/static/css/team.css
@@ -120,7 +120,7 @@ img.thumbnail_owner_project {
 
 .users_container {
     position: relative;
-    top: 15px;
+    /*top: 15px;*/
 }
 
 .users_container h5 {
